# git_practice

./: README.md  pyproject.toml
app/: __main__.py
app/backtest/: engine.py  metrics.py
app/config/: loader.py  models.py  parser.py
app/core/: portfolio.py  risk.py
app/data/: providers.py
app/notify/: channels.py
app/paper/: trader.py
app/signals/: indicators.py  pipeline.py  rules.py
app/ui/: main_window.py
assets/sample_data/: AAPL.csv  MSFT.csv
assets/strategies/: momentum_pullback.yaml
assets/watchlists/: us_tech.yaml
config/: settings.yaml
reports/: momentum_pullback_with_risk_controls_equity.csv  momentum_pullback_with_risk_controls_metrics.json  momentum_pullback_with_risk_controls_trades.csv
tests/backtest/: test_engine.py  test_risk_utils.py
tests/config/: test_strategy_loader.py
tests/signals/: test_indicators.py  test_rules.py
